added centralized database

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <header class="app-header">
+        <div class="app-header__title">SIT772 HD Task - Complete DevSecOps Pipeline</div>
+        <div class="app-header__meta">Ahmad Chaudhry · s224227027</div>
+    </header>
     <div class="container">
         <h1>Which is your favorite cloud provider?</h1>
         
